# Autonomous-6-Wheel-Rover-Navigation-System

./: .gitignore  QUICKSTART.md  README.md  REPO_DESCRIPTION.md  requirements.txt
src/rover_description/: CMakeLists.txt  package.xml
src/rover_description/launch/: display.launch.py
src/rover_description/urdf/: rover.urdf.xacro
src/rover_gps/: CMakeLists.txt  package.xml
src/rover_gps/launch/: gps_navigation.launch.py
src/rover_gps/scripts/: gps_goal_converter.py  gps_waypoint_navigator.py
src/rover_localization/: CMakeLists.txt  package.xml
src/rover_localization/launch/: localization.launch.py
src/rover_navigation/: CMakeLists.txt  package.xml
src/rover_navigation/launch/: bringup.launch.py  navigation.launch.py
src/rover_perception/: CMakeLists.txt  package.xml
src/rover_perception/launch/: perception.launch.py
src/rover_perception/scripts/: object_detector.py  obstacle_publisher.py
src/rover_sensors/: CMakeLists.txt  package.xml
src/rover_sensors/launch/: rplidar.launch.py  sensors.launch.py  zed_camera.launch.py
src/rover_slam/: CMakeLists.txt  package.xml
src/rover_slam/launch/: slam.launch.py
