<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover_sensors</name>
  <version>1.0.0</version>
  <description>Sensor drivers and launch files for RPLidar and ZED 2i camera</description>
  <maintainer email="sharangs@example.com">Sharan G S</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rplidar_ros</depend>
  <depend>zed_wrapper</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
